version 0.8
  - Use cStringIO instead of string concatenation - about 3 times faster
    (Patch provided by Ed Hein)
  - Fixed license header in source files - it's the BSD licence now!

version 0.7
  - Fixed file/dir node permissions
  - Added README
  - BSD Licence
  - Added TODO and HISTORY
  - Enable "./setup.py test" for running the tests

version 0.6
  - inital release