@@ -51,7 +51,7 @@ class TestMpg(unittest.TestCase):
         self.assertEqual('1234567890abcdefghij1234567890abcdefghij', node.read(0, 4096))
 
     def test_mpg_new(self):
-        node = get_node(self.video, '/sample-vdr1.7_2008-03-28.20.13.99.99.rec.mpg')
+        node = get_node(self.video, '/sample-vdr1.7_2008-03-28.20.13.10-1.rec.mpg')
         self.assertEqual(40, node.size())
         self.assertEqual('1234567890abcdefghij1234567890abcdefghij', node.read(0, 4096))
 
